2007-03-22  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by kevin

        <rdar://problem/5081257> 
        REGRESSION: New Mail signatures start out empty

        * editing/VisiblePosition.cpp:
        (WebCore::VisiblePosition::canonicalPosition): Allow
        descent from positions inside the document into an 
        editable body.

2007-03-22  Brady Eidson  <beidson@apple.com>

        Reviewed by Adele and John

        <rdar://5043528> - Prepare for new API
        
        * platform/network/ResourceHandle.cpp:
        (WebCore::ResourceHandle::clearAuthentication): Clear CF type

2007-03-22  Beth Dakin  <bdakin@apple.com>

        Patch by Hyatt, reviewed and committed by me.

        Does not reproduce consistently, so a layout test does not seem 
        possible.

        Fix for <rdar://problem/5082421> Constantly hitting ASSERT(!
        needsLayout()) in RenderView::paint()

        * page/FrameView.cpp:
        (WebCore::FrameView::layoutPending): It is not enough to ask if the 
        layout timer is active. There may be times that we don't have a 
        body yet so we cannot schedule layout yet, but the root still needs 
        layout.  

2007-03-22  John Sullivan  <sullivan@apple.com>

        Reviewed by Darin
        
        Followup for recent fix to 5079700, found by assertion added to Safari.

        * page/mac/FrameMac.mm:
        (WebCore::Frame::searchForLabelsBeforeElement):
        Fixed another place in this method where an empty NSString was being returned instead of nil.
        Cleaned up the style a little too.

2007-03-22  David Hyatt  <hyatt@apple.com>

        Remove unnecessary destroyFrameAtIndex call.  Now that we throw away
        the image source, it is no longer needed.

        Reviewed by beth

        * platform/graphics/BitmapImage.cpp:
        (WebCore::BitmapImage::destroyDecodedData):

2007-03-22  David Harrison  <harrison@apple.com>

        Reviewed by Geoff, Darin.
